<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blastbeatsandcode.colors_app.DrawingActivity">


    <Button
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="25dp"
        android:layout_alignParentLeft="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_save"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/save"
        android:textSize="25dp"
        app:layout_constraintStart_toEndOf="@id/btn_clear"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.blastbeatsandcode.colors_app.DrawingCanvasView
        android:id="@+id/drawing_area"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:layout_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_clear"
        app:layout_constraintEnd_toStartOf="@id/btn_color_picker"/>

    <Button
        android:id="@+id/btn_switch_to_user_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_clear"
        android:layout_marginBottom="8dp"
        android:text="@string/enter_text"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@id/btn_color_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/btn_color_picker"/>

    <Button
        android:id="@+id/btn_color_picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@+id/btn_clear"
        android:background="#000"
        android:text="@string/colors"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/btn_switch_to_user_entry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
