<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blastbeatsandcode.colors_app.MainActivity">

    <EditText
        android:id="@+id/txt_user_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="25dp"
        android:textAlignment="center"
        android:inputType="textAutoComplete"
        android:text="Enter Some Text" />

    <Button
        android:id="@+id/btn_randomize_color"
        android:layout_width="255dp"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/randomize_color"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_switch_to_drawing"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/btn_randomize_color"
        android:text="@string/draw"
        android:background="@color/switchActivity"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_randomize_color" />

    <TextView
        android:id="@+id/lbl_color_value"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@+id/txt_user_entry"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/color_value"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_user_entry" />

    <TextView
        android:id="@+id/lbl_rgb_color_value"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@+id/txt_user_entry"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="0r, 0g, 0b"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_color_value" />

    <TextView
        android:id="@+id/lbl_hex_color_value"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@+id/txt_user_entry"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="#000000"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_rgb_color_value" />

</android.support.constraint.ConstraintLayout>